<resources>
    <string name="app_name">CryptoApp</string>
    <string name="Type">Type</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="isNew">New</string>
    <string name="isActive">Active</string>
    <string name="tvTether">Tether</string>
    <string name="tvEthereum">Ethereum</string>
    <string name="tvBitcoin">Bitcoin</string>
    <string name="bitcoinContentDescription">Bitcoin</string>
    <string name="ethereumContentDescription">Ethereum</string>
    <string name="tetherContentDescription">Tether</string>
    <string name="tagsTitle">Tags</string>
    <string name="image_coin">Image Coin</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_image_view">userImageView</string>
    <string name="search_button">search_button</string>
    <string name="stars">Stars</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="must_watch">Must watch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="ship_image">ship image</string>
    <string name="star_image">star image</string>
    <string name="ships">Ships</string>
    <string name="cinema_image">cinema image</string>
    <string name="coming_soon">Coming soon</string>
    <string name="out_in_cinemas">Out in cinemas</string>
    <string name="no_released_date">No released date</string>
    <string name="title">Title:</string>
    <string name="overview">Overview:</string>
    <string name="air_date">Air date:</string>
    <string name="popularity">Popularity:</string>

</resources>