<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_doodle_extended"
        tools:context=".HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E41F2D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/user_image_view"
            android:src="@drawable/user_toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/search_button"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.zhpan.indicator.IndicatorView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="@id/viewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:vpi_slider_checked_color="#F5A431"
            app:vpi_slider_normal_color="@color/white" />

        <TextView
            android:id="@+id/starsTag"
            style="@style/tags_style"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/stars_tag"
            android:text="@string/stars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/starsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starsTag" />

        <TextView
            android:id="@+id/topRatedMoviesTag"
            style="@style/tags_style"
            android:layout_width="115dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rated_movies"
            android:text="@string/top_rated_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/starsRecycleView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ratedMoviesRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topRatedMoviesTag" />

        <TextView
            android:id="@+id/popularMoviesTag"
            style="@style/tags_style"
            android:layout_width="115dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/popular_movies_tag"
            android:text="@string/popular_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratedMoviesRecycleView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularMoviesRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularMoviesTag" />

        <TextView
            android:id="@+id/airingMoviesTag"
            style="@style/tags_style"
            android:layout_width="115dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/popular_movies_tag"
            android:text="@string/airing_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularMoviesRecycleView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/airingMoviesRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/airingMoviesTag" />

        <TextView
            android:id="@+id/shipsTag"
            style="@style/tags_style"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/stars_tag"
            android:text="@string/ships"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/airingMoviesRecycleView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shipsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shipsTag" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
