<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_doodle_extended">

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/title_label"
        style="@style/label_description_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/posterImage"
        tools:text="Title:" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Prison Break"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/overview_label"
        style="@style/label_description_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Overview:" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Prison Break sssss aaaa"
        app:layout_constraintTop_toBottomOf="@id/overview_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:paddingStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/popularity_label"
        style="@style/label_description_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview"
        tools:text="Popularity:" />

    <TextView
        android:id="@+id/popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Prison Break sssss aaaa"
        app:layout_constraintTop_toBottomOf="@id/popularity_label"
        app:layout_constraintStart_toStartOf="@id/popularity_label"
        app:layout_constraintEnd_toEndOf="@id/popularity_label"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>